<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-41dp">

        <com.shirleywbi.hnefatafl.ui.BoardView
            android:id="@+id/board_layout"
            android:layout_width="396dp"
            android:layout_height="399dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/more_info_btn"
            android:layout_width="45dp"
            android:layout_height="37dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/icon_question_mark" />

        <Button
            android:id="@+id/forfeit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/forfeit"
            app:layout_constraintBottom_toTopOf="@+id/board_layout"
            app:layout_constraintEnd_toStartOf="@+id/undo_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/undo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_edge"
            android:layout_marginRight="@dimen/padding_edge"
            android:layout_marginBottom="20dp"
            android:text="@string/undo"
            app:layout_constraintBottom_toTopOf="@+id/board_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/turn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="30dp" />

        <TextView
            android:id="@+id/player_turn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attacker"
            app:layout_constraintStart_toEndOf="@+id/turn_text"
            tools:layout_editor_absoluteY="29dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>